--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -30,6 +30,7 @@
     <dimen name="elevation_high">4dp</dimen>
     <dimen name="add_button_margin">16dp</dimen>
     <dimen name="round_button_diameter">50dp</dimen>
+    <dimen name="round_button_radius">25dp</dimen>
     <dimen name="store_schedule_tabstop">70sp</dimen>
     <dimen name="weekly_ad_image_width">240dp</dimen>
     <dimen name="weekly_ad_image_height">240dp</dimen>
