--- a/app/src/main/res/layout/checkout_registered_entry.xml
+++ b/app/src/main/res/layout/checkout_registered_entry.xml
@@ -17,8 +17,8 @@
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp" >
+        android:paddingLeft="@dimen/margin_16dp"
+        android:paddingRight="@dimen/margin_16dp" >
         <TextView
             android:id="@+id/checkout_shipping_addr_label"
             android:layout_alignParentTop="true"
@@ -62,8 +62,8 @@
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:paddingLeft="@dimen/margin_16dp"
+        android:paddingRight="@dimen/margin_16dp"
         >
         <TextView
             android:id="@+id/checkout_payment_method_label"
@@ -110,8 +110,8 @@
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:paddingLeft="@dimen/margin_16dp"
+        android:paddingRight="@dimen/margin_16dp"
         >
         <TextView
             android:id="@+id/checkout_billing_addr_label"
