--- a/app/src/main/res/layout/confirmation_create_account.xml
+++ b/app/src/main/res/layout/confirmation_create_account.xml
@@ -44,7 +44,7 @@
             style="@style/GraySubheading"
             android:layout_alignParentLeft="true"
             android:layout_below="@id/emailAddr"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/margin_16dp"
             android:layout_marginLeft="4dp"
             android:text="@string/password"/>
         <EditText
@@ -66,7 +66,7 @@
             style="@style/GraySubheading"
             android:layout_toRightOf="@id/password"
             android:layout_below="@id/password_label"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="@dimen/margin_16dp"
             android:layout_marginTop="8dp"
             android:textColor="@color/staples_blue"
             android:text="@string/show"/>
