--- a/app/src/main/res/layout/order_fragment.xml
+++ b/app/src/main/res/layout/order_fragment.xml
@@ -42,7 +42,7 @@
         android:layout_gravity="bottom"
         android:orientation="vertical"
         android:visibility="invisible"
-        android:padding="16dp"
+        android:padding="@dimen/margin_16dp"
         android:background="@color/staples_white">
         <!--label and close button-->
         <RelativeLayout
