--- a/app/src/main/res/layout/weekly_ad_categories_item.xml
+++ b/app/src/main/res/layout/weekly_ad_categories_item.xml
@@ -16,7 +16,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="16dp"
+            android:padding="@dimen/margin_16dp"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/weekly_ad_category_title_text"
@@ -38,7 +38,7 @@
             android:layout_width="@dimen/weekly_ad_category_item_image_width"
             android:layout_height="@dimen/weekly_ad_category_item_image_height"
             android:scaleType="fitEnd"
-            android:paddingTop="16dp"
-            android:paddingRight="16dp"/>
+            android:paddingTop="@dimen/margin_16dp"
+            android:paddingRight="@dimen/margin_16dp"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
