--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,11 +55,13 @@
     </style>
     <style name="SortOptionStyle">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">4dp</item>
+        <item name="android:layout_height">32sp</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:button">@drawable/radio_button_white</item>
         <item name="android:lines">1</item>
         <item name="android:typeface">serif</item>
-        <item name="android:textSize">@dimen/fontsize_16sp</item>
+        <item name="android:textSize">@dimen/fontsize_14sp</item>
         <item name="android:textColor">@color/staples_white</item>
     </style>
 
