--- a/app/src/main/res/layout/personal_feed.xml
+++ b/app/src/main/res/layout/personal_feed.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp"
+        android:padding="@dimen/margin_16dp"
         android:scrollbarStyle="outsideOverlay">
 
         <LinearLayout
@@ -32,14 +32,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left|center_vertical"
-                        android:padding="10dp"
+                        android:padding="@dimen/verticalspacing_8dp"
                         android:text="@string/feed_seen_products_title"/>
                     <TextView
                         android:id="@+id/seen_products_clear"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="right|center_vertical"
-                        android:padding="10dp"
+                        android:padding="@dimen/verticalspacing_8dp"
                         android:text="Clear"/>
                 </LinearLayout>
                 <View
@@ -56,7 +56,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:paddingLeft="10dp">
+                        android:paddingLeft="@dimen/verticalspacing_8dp">
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -70,7 +70,7 @@
                             android:gravity="center"
                             android:textSize="@dimen/fontsize_20sp"
                             android:text="@string/loading"
-                            android:padding="5dp"/>
+                            android:padding="@dimen/verticalspacing_8dp"/>
                         <ProgressBar
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
@@ -82,15 +82,14 @@
                         android:gravity="center"
                         android:textSize="@dimen/fontsize_20sp"
                         android:text="@string/empty"
-                        android:padding="5dp"/>
-
+                        android:padding="@dimen/verticalspacing_8dp"/>
                     <RelativeLayout
                         android:id="@+id/seen_products_loading_footer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:gravity="center"
-                        android:padding="10dp"
+                        android:padding="@dimen/verticalspacing_8dp"
                         android:visibility="gone">
                         <ProgressBar
                             android:layout_width="wrap_content"
@@ -102,7 +101,7 @@
             <!-- Separator -->
             <View
                 android:layout_width="fill_parent"
-                android:layout_height="10dp"/>
+                android:layout_height="@dimen/verticalspacing_8dp"/>
 
             <!-- Clearance Products in Cart -->
             <LinearLayout
@@ -115,7 +114,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
-                    android:padding="10dp"
+                    android:padding="@dimen/verticalspacing_8dp"
                     android:text="@string/feed_clearance_title"/>
                 <View
                     android:layout_width="fill_parent"
@@ -131,7 +130,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:paddingLeft="10dp"/>
+                        android:paddingLeft="@dimen/verticalspacing_8dp"/>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
@@ -144,7 +143,7 @@
                             android:gravity="center"
                             android:textSize="@dimen/fontsize_20sp"
                             android:text="@string/loading"
-                            android:padding="5dp"/>
+                            android:padding="@dimen/verticalspacing_8dp"/>
                         <ProgressBar
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
@@ -156,14 +155,14 @@
                         android:gravity="center"
                         android:textSize="@dimen/fontsize_20sp"
                         android:text="@string/empty"
-                        android:padding="5dp"/>
+                        android:padding="@dimen/verticalspacing_8dp"/>
                 </com.staples.mobile.cfa.widget.DataWrapper>
             </LinearLayout>
 
             <!-- Separator -->
             <View
                 android:layout_width="fill_parent"
-                android:layout_height="10dp"/>
+                android:layout_height="@dimen/verticalspacing_8dp"/>
 
             <!-- Daily Deal Products in Cart -->
             <LinearLayout
@@ -176,7 +175,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
-                    android:padding="10dp"
+                    android:padding="@dimen/verticalspacing_8dp"
                     android:text="@string/feed_daily_deal_title"/>
                 <View
                     android:layout_width="fill_parent"
@@ -192,7 +191,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:paddingLeft="10dp"/>
+                        android:paddingLeft="@dimen/verticalspacing_8dp"/>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
@@ -205,7 +204,7 @@
                             android:gravity="center"
                             android:textSize="@dimen/fontsize_20sp"
                             android:text="@string/loading"
-                            android:padding="5dp"/>
+                            android:padding="@dimen/verticalspacing_8dp"/>
                         <ProgressBar
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
@@ -217,7 +216,7 @@
                         android:gravity="center"
                         android:textSize="@dimen/fontsize_20sp"
                         android:text="@string/empty"
-                        android:padding="5dp"/>
+                        android:padding="@dimen/verticalspacing_8dp"/>
                 </com.staples.mobile.cfa.widget.DataWrapper>
             </LinearLayout>
         </LinearLayout>
