feed and search style update

--- a/app/src/main/res/layout/personal_feed_product_item.xml
+++ b/app/src/main/res/layout/personal_feed_product_item.xml
@@ -12,11 +12,11 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginRight="10dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"/>
+            android:layout_width="@dimen/personal_feed_item_image_width"
+            android:layout_height="@dimen/personal_feed_item_image_height"
+            android:layout_marginRight="@dimen/margin_16dp"
+            android:paddingTop="@dimen/verticalspacing_8dp"
+            android:paddingBottom="@dimen/verticalspacing_8dp"/>
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -30,13 +30,15 @@
                 android:ellipsize="end"
                 android:textSize="@dimen/fontsize_16sp"
                 android:maxLines="3"
-                android:paddingRight="25dp"/>
+                android:paddingRight="@dimen/margin_16dp"/>
             <com.staples.mobile.cfa.widget.RatingStars
                 android:id="@+id/rating"
-                style="@style/SmallRatingStars"/>
+                style="@style/SmallRatingStars"
+                android:layout_marginTop="@dimen/elevation_high"/>
             <com.staples.mobile.cfa.widget.PriceSticker
                 android:id="@+id/pricing"
-                style="@style/SmallPriceSticker"/>
+                style="@style/SmallPriceSticker"
+                android:layout_marginTop="@dimen/elevation_high"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -47,7 +49,6 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:adjustViewBounds="true"
-        android:paddingRight="5dp"
         android:src="@drawable/ic_chevron_right_black"/>
 </RelativeLayout>
 
