--- a/app/src/main/res/layout/bundle_item_tall.xml
+++ b/app/src/main/res/layout/bundle_item_tall.xml
@@ -3,19 +3,19 @@
     android:id="@+id/bundle_item"
     android:layout_width="match_parent"
     android:layout_height="@dimen/fixed_grid_tall_height"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
+    android:paddingLeft="@dimen/margin_16dp"
+    android:paddingRight="@dimen/margin_16dp"
     android:background="@color/staples_white">
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="@dimen/image_square_size"
-        android:layout_marginTop="22dp"/>
+        android:layout_marginTop="@dimen/margin_16dp"/>
     <TextView
         android:id="@+id/title"
         style="@style/SmallProductTitle"
         android:layout_below="@+id/image"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="@dimen/margin_16dp"/>
 
     <!-- Shipping Logic -->
     <LinearLayout
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="@dimen/elevation_high"
             android:visibility="gone">
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -39,9 +39,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="12sp"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
+                    android:textSize="@dimen/fontsize_12sp"
+                    android:paddingLeft="@dimen/left_margin"
+                    android:paddingRight="@dimen/right_margin"
                     android:gravity="left"
                     android:text="@string/overweight"
                     android:textColor="@color/staples_white"/>
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="@dimen/elevation_high"
             android:visibility="gone">
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -63,9 +63,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="12sp"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
+                    android:textSize="@dimen/fontsize_12sp"
+                    android:paddingLeft="@dimen/left_margin"
+                    android:paddingRight="@dimen/right_margin"
                     android:gravity="left"
                     android:text="@string/add_on"
                     android:textColor="@color/staples_white"/>
@@ -77,12 +77,12 @@
         android:id="@+id/pricing"
         style="@style/SmallPriceSticker"
         android:layout_below="@+id/shipping_logic_layout"
-        android:layout_marginTop="6dp"/>
+        android:layout_marginTop="@dimen/elevation_high"/>
     <com.staples.mobile.cfa.widget.RatingStars
         android:id="@+id/rating"
         style="@style/SmallRatingStars"
         android:layout_below="@+id/pricing"
-        android:layout_marginTop="6dp"/>
+        android:layout_marginTop="@dimen/elevation_high"/>
     <ImageView
         android:id="@+id/bundle_action"
         android:layout_width="wrap_content"
