--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -38,6 +38,8 @@
     <dimen name="weekly_ad_list_item_image_height">120dp</dimen>
     <dimen name="weekly_ad_category_item_image_width">100dp</dimen>
     <dimen name="weekly_ad_category_item_image_height">100dp</dimen>
+    <dimen name="personal_feed_item_image_width">120dp</dimen>
+    <dimen name="personal_feed_item_image_height">120dp</dimen>
     <dimen name="left_margin">6dp</dimen>
     <dimen name="right_margin">6dp</dimen>
     <dimen name="browse_item_height">42dp</dimen>
