--- a/app/src/main/res/layout/order_item_row.xml
+++ b/app/src/main/res/layout/order_item_row.xml
@@ -8,7 +8,7 @@ android:id="@+id/orderLayout">
     android:id="@+id/orderNumTv"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textColor="@android:color/black"
+	android:textColor="@color/staples_black"
     android:textSize="@dimen/fontsize_18sp"
     android:paddingTop="10dp"
     android:paddingLeft="10dp"
@@ -23,7 +23,7 @@ android:id="@+id/orderLayout">
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:layout_alignParentRight="true"
-    android:textColor="@android:color/black" />
+	android:textColor="@color/staples_black" />
 <TextView
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
@@ -32,7 +32,7 @@ android:id="@+id/orderLayout">
     android:paddingTop="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:textColor="@android:color/holo_purple"
+	android:textColor="@color/staples_green"
     android:maxLines="1"
     android:layout_below="@+id/orderNumTv"/>
 <TextView
@@ -41,7 +41,7 @@ android:id="@+id/orderLayout">
     android:layout_height="wrap_content"
     android:textSize="@dimen/fontsize_18sp"
     android:layout_below="@+id/orderStatusTV"
-    android:textColor="@android:color/black"
+	android:textColor="@color/staples_black"
     android:paddingTop="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"/>
