--- a/app/src/main/res/layout/config_frame.xml
+++ b/app/src/main/res/layout/config_frame.xml
@@ -33,7 +33,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:textSize="@dimen/fontsize_14sp"
-                        android:textColor="@android:color/black"/>
+						android:textColor="@color/staples_black"/>
                     <TextView
                         android:id="@+id/login_username"
                         android:layout_width="match_parent"
@@ -43,7 +43,7 @@
                         android:ellipsize="end"
                         android:textSize="@dimen/fontsize_14sp"
                         android:visibility="gone"
-                        android:textColor="@android:color/black"/>
+						android:textColor="@color/staples_black"/>
 
                     <LinearLayout
                         android:id="@+id/login_info_layout"
@@ -57,7 +57,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:textSize="@dimen/fontsize_14sp"
-                            android:textColor="@android:color/black"
+							android:textColor="@color/staples_black"
                             android:textStyle="bold"
                             android:text="@string/login_title"/>
                         <TextView
@@ -65,7 +65,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:textSize="@dimen/fontsize_14sp"
-                            android:textColor="@android:color/black"
+							android:textColor="@color/staples_black"
                             android:text="@string/or"/>
                         <TextView
                             android:id="@+id/login_sign_up"
@@ -73,7 +73,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:textSize="@dimen/fontsize_14sp"
-                            android:textColor="@android:color/black"
+							android:textColor="@color/staples_black"
                             android:textStyle="bold"
                             android:text="@string/signup_title"/>
                         <TextView
@@ -81,7 +81,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:textSize="@dimen/fontsize_14sp"
-                            android:textColor="@android:color/black"
+							android:textColor="@color/staples_black"
                             android:text="@string/question_mark"/>
                     </LinearLayout>
                 </LinearLayout>
@@ -104,7 +104,7 @@
                         android:lines="1"
                         android:maxEms="4"
                         android:ellipsize="end"
-                        android:textColor="@android:color/black"/>
+						android:textColor="@color/staples_black"/>
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -116,14 +116,14 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:textSize="@dimen/fontsize_13sp"
-                            android:textColor="@android:color/black"
+							android:textColor="@color/staples_black"
                             android:text="@string/redeem"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:textSize="@dimen/fontsize_13sp"
-                            android:textColor="@android:color/black"
+							android:textColor="@color/staples_black"
                             android:text="@string/reward"/>
                     </LinearLayout>
                 </LinearLayout>
@@ -157,7 +157,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
                                 android:textSize="@dimen/fontsize_12sp"
-                                android:textColor="@android:color/black"/>
+								android:textColor="@color/staples_black"/>
                         </LinearLayout>
 
                         <LinearLayout
@@ -170,7 +170,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
                                 android:textSize="@dimen/fontsize_13sp"
-                                android:textColor="@android:color/black"
+								android:textColor="@color/staples_black"
                                 android:text="@string/store_nearby"/>
                             <TextView
                                 android:id="@+id/store_name"
@@ -181,7 +181,7 @@
                                 android:ellipsize="end"
                                 android:maxEms="4"
                                 android:textSize="@dimen/fontsize_13sp"
-                                android:textColor="@android:color/black"
+								android:textColor="@color/staples_black"
                                 android:textStyle="bold"/>
                         </LinearLayout>
                     </LinearLayout>
@@ -256,6 +256,5 @@
             android:padding="0dp">
 		</LinearLayout>
 	</ScrollView>
-
 
 </com.staples.mobile.cfa.widget.AnimatorLayout>
