--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -31,7 +31,7 @@
         android:paddingTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
-        android:background="@android:color/black"/>
+		android:background="@color/staples_black"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -58,7 +58,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:paddingTop="10dp"
-        android:background="@android:color/black"/>
+		android:background="@color/staples_black"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -97,7 +97,7 @@
     <View
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+		android:background="@color/staples_dark_gray"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -115,5 +115,5 @@
     <View
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+		android:background="@color/staples_dark_gray"/>
 </com.staples.mobile.cfa.widget.AnimatorLayout>
