--- a/app/src/main/res/drawable-v21/oval_red.xml
+++ b/app/src/main/res/drawable-v21/oval_red.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@android:color/holo_red_light">
+    android:color="@color/staples_red">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@android:color/holo_red_dark"/>
+            <solid android:color="@color/staples_dark"/>
         </shape>
     </item>
 </ripple>
