--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -16,8 +16,10 @@
         android:id="@+id/free_shipping_msg"
         android:layout_width="match_parent"
         android:layout_height="32dp"
-        android:gravity="center"
-        android:textColor="@color/staples_white"
+        android:gravity="center_vertical"
+        android:paddingLeft="@dimen/margin_16dp"
+        android:background="@color/staples_white"
+        android:textColor="@color/staples_green"
         android:textSize="@dimen/fontsize_14sp"
         />
 
@@ -127,7 +129,7 @@
             android:layout_gravity="left|center_vertical"
             android:text="@string/coupons_rewards"
             android:textSize="@dimen/fontsize_14sp"
-            android:textColor="@color/staples_blue"
+            android:textColor="@color/staples_green"
             />
         <TextView
             android:id="@+id/coupons_rewards_value"
@@ -135,7 +137,7 @@
             android:layout_width="wrap_content"
             android:layout_gravity="right|center_vertical"
             android:textSize="@dimen/fontsize_14sp"
-            android:textColor="@color/staples_blue"
+            android:textColor="@color/staples_green"
             />
     </android.support.v7.widget.CardView>
 
