--- a/app/src/main/res/layout/confirmation_create_account.xml
+++ b/app/src/main/res/layout/confirmation_create_account.xml
@@ -68,7 +68,7 @@
             android:layout_below="@id/password_label"
             android:layout_marginLeft="@dimen/margin_16dp"
             android:layout_marginTop="8dp"
-            android:textColor="@color/staples_blue"
+            android:textColor="@color/staples_dark_gray"
             android:text="@string/show"/>
 
         <!--password rules text-->
