--- a/app/src/main/res/layout/login_create_page.xml
+++ b/app/src/main/res/layout/login_create_page.xml
@@ -65,7 +65,7 @@
         android:id="@+id/passwordLbl"
         android:textSize="@dimen/fontsize_16sp"
         android:clickable="true"
-        android:textColor="@color/staples_blue"
+        android:textColor="@color/staples_dark_gray"
         android:layout_alignBottom="@+id/passwordRegister"
         android:layout_alignRight="@+id/passwordRegister"
         android:paddingBottom="10dip"
