--- a/app/src/main/res/layout/cart_item_group.xml
+++ b/app/src/main/res/layout/cart_item_group.xml
@@ -10,7 +10,7 @@
     android:layout_centerHorizontal="true"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="@dimen/verticalspacing_8dp"
     android:layout_marginBottom="0dp"
     card_view:contentPadding="0dp"
     card_view:cardBackgroundColor="@color/staples_white"
@@ -58,7 +58,7 @@
             android:layout_below="@id/horizontal_rule"
             android:paddingLeft="@dimen/margin_16dp"
             android:paddingRight="@dimen/margin_16dp"
-            android:paddingBottom="8dp"
+            android:paddingBottom="@dimen/verticalspacing_8dp"
             android:paddingTop="0dp"
             android:orientation="vertical">
 
