--- a/app/src/main/res/layout/order_detail_fragment.xml
+++ b/app/src/main/res/layout/order_detail_fragment.xml
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingBottom="8dp"
+        android:paddingBottom="@dimen/verticalspacing_8dp"
         android:paddingTop="0dp"
         android:orientation="vertical">
 
