--- a/app/src/main/res/layout/rewards_fragment.xml
+++ b/app/src/main/res/layout/rewards_fragment.xml
@@ -20,8 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="@dimen/verticalspacing_8dp"
+            android:layout_marginBottom="@dimen/verticalspacing_8dp"
             other:contentPadding="6dp"
             other:cardCornerRadius="8dp"
             other:cardElevation="4dp"
@@ -58,7 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:padding="8dp"
+                    android:padding="@dimen/verticalspacing_8dp"
                     android:layout_below="@id/rewards_number_label"
                     other:barcodeHeight="36dp"
                     other:barcodeColor="@color/staples_black"
