--- a/app/src/main/res/layout/checkout_registered_entry.xml
+++ b/app/src/main/res/layout/checkout_registered_entry.xml
@@ -7,16 +7,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
+    android:paddingTop="@dimen/verticalspacing_8dp"
+    android:paddingBottom="@dimen/verticalspacing_8dp"
     >
 
     <!-- Shipping address -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
+        android:paddingTop="@dimen/verticalspacing_8dp"
+        android:paddingBottom="@dimen/verticalspacing_8dp"
         android:paddingLeft="@dimen/margin_16dp"
         android:paddingRight="@dimen/margin_16dp" >
         <TextView
@@ -60,8 +60,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
+        android:paddingTop="@dimen/verticalspacing_8dp"
+        android:paddingBottom="@dimen/verticalspacing_8dp"
         android:paddingLeft="@dimen/margin_16dp"
         android:paddingRight="@dimen/margin_16dp"
         >
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/card_image"
             android:layout_below="@id/checkout_payment_method_label"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/verticalspacing_8dp"
             style="@style/CheckoutText"/>
         <ImageView
             android:id="@+id/payment_methods"
@@ -108,8 +108,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
+        android:paddingTop="@dimen/verticalspacing_8dp"
+        android:paddingBottom="@dimen/verticalspacing_8dp"
         android:paddingLeft="@dimen/margin_16dp"
         android:paddingRight="@dimen/margin_16dp"
         >
