--- a/app/src/main/res/layout/confirmation_fragment.xml
+++ b/app/src/main/res/layout/confirmation_fragment.xml
@@ -26,7 +26,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="@dimen/margin_16dp"
-                android:padding="8dp"
+                android:padding="@dimen/verticalspacing_8dp"
                 android:background="@drawable/oval_green"
                 android:src="@drawable/ic_check_white_24dp"/>
 
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/verticalspacing_8dp"
                 android:textSize="@dimen/fontsize_14sp"
                 android:textColor="@color/staples_black"
                 android:text="@string/order_confirmation_msg2"/>
@@ -190,8 +190,8 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="36dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="@dimen/verticalspacing_8dp"
+        android:layout_marginBottom="@dimen/verticalspacing_8dp"
         android:padding="0dp"
         card_view:cardCornerRadius="1dp"
         card_view:cardElevation="0dp"
