--- a/app/src/main/res/layout/weekly_ad_category.xml
+++ b/app/src/main/res/layout/weekly_ad_category.xml
@@ -55,7 +55,7 @@
                 android:id="@+id/date_range"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="8dp"
+                android:paddingTop="@dimen/verticalspacing_8dp"
                 android:textColor="@color/staples_white"
                 android:textSize="@dimen/fontsize_20sp"
                 />
